--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\MoveSleigh.cs" />
+     <Compile Include="Assets\Scripts\Settings.cs" />
      <Compile Include="Assets\Scripts\Snowflake.cs" />
      <Compile Include="Assets\Scripts\SnowflakeManager.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
