--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,12 +53,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Gift.cs" />
      <Compile Include="Assets\Scripts\GiftSpawner.cs" />
+     <Compile Include="Assets\Scripts\Justin.cs" />
      <Compile Include="Assets\Scripts\MoveSleigh.cs" />
+     <Compile Include="Assets\Scripts\Score.cs" />
      <Compile Include="Assets\Scripts\Settings.cs" />
      <Compile Include="Assets\Scripts\Snowflake.cs" />
      <Compile Include="Assets\Scripts\SnowflakeManager.cs" />
+     <Compile Include="Assets\Scripts\Timer.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>/Users/rod/dev-personal/12Days/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
